# compiler

./: README.md  pyproject.toml
docs/: language_spec.md
examples/: hello.src  test.src
src/: cli.py
src/lexer/: __init__.py  scanner.py  tokens.py
src/preprocessor/: __init__.py  macros.py  preprocessor.py  test_p.py
tests/: test_cli.py  test_lexer.py  test_p.py  test_runner.py
tests/lexer/invalid/: bad_escape.expected  int_overflow.expected  malformed_float.expected  mixed_error.expected  mixed_error.src  negative_overflow.expected  single_pipe.expected  unterminated_block.expected  unterminated_string.expected
tests/lexer/valid/: test_arithmetic_ops.expected  test_assignment_ops.expected  test_assignment_ops.src  test_block_comment.expected  test_block_comment.src  test_bool_literals.expected  test_complex_expression.expected  test_complex_expression.src  test_delimiters.expected  test_delimiters.src  test_float_literals.expected  test_float_literals.src  test_identifiers.expected  test_identifiers.src  test_if_statement.expected  test_if_statement.src  test_int_literals.expected  test_int_literals.src  test_keywords.expected  test_keywords.src  test_logical_ops.expected  test_mixed_1.expected  test_relational_ops.expected  test_single_line_comment.expected  test_single_line_comment.src  test_string_escape.expected  test_string_simple.expected  test_unix_lines.expected  test_whitespace.expected  test_whitespace.src  test_windows_lines.expected
